--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
   },
   "homepage": "https://github.com/Mauro-Domingues/teste_backend_node#readme",
   "dependencies": {
+    "nodemon": "^2.0.20",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
   }
 }
