--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "teste_backend_node",
   "version": "1.0.0",
   "description": "Projeto nodejs",
-  "main": "index.js",
+  "main": "app.js",
   "bin": {
     "teste_backend_node": "bin/server.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./bin/server.js"
+    "start": "node ./bin/server.js"
   },
   "repository": {
     "type": "git",
@@ -27,8 +27,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20"
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
