--- a/.env.template
+++ b/.env.template
@@ -5,10 +5,10 @@ DB_PASSWORD=
 DB_DATABASE=
 
 # Conexão local
-DB_HOST=
-DB_USER=
-DB_PASSWORD=
-DB_DATABASE=
+#DB_HOST=
+#DB_USER=
+#DB_PASSWORD=
+#DB_DATABASE=
 
 # Bearer Token
 SECRET=
