--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "env": {
+    "production": "true",
+    "verboseApiCalls": "false"
   }
 }
